update of the intro texts

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,6 +6,7 @@
           Political Gaps
         </h1>
         <p class="lead">
+          How representative (or not) are our parliaments?
           PoliticalGaps is the first investigation on <a href="http://www.jquestapp.com" target="_blank">jQuest</a>, a platform for journalism schools that lets journalism students in Europe learn datajournalism, connect with one another and investigate collaboratively.
         </p>
         <p class="lead">
@@ -16,6 +17,9 @@
     <div class="main__elastic__filters">
       <div class="container">
         <h3 class="main__elastic__filters__heading">Filter legislatures</h3>
+         <p class="lead">
+          Use the filters to select a legislature and visualize the data collected on the representatives. 
+        </p>
         <div class="hidden-md-up">
           <div class="form-group">
             <label for="input-country">
