--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -7,7 +7,7 @@
         </h1>
         <p class="lead">
           How representative (or not) are our parliaments?
-          PoliticalGaps is the first investigation on <a href="http://www.jquestapp.com" target="_blank">jQuest</a>, a platform for journalism schools that lets journalism students in Europe learn datajournalism, connect with one another and investigate collaboratively.
+          PoliticalGaps is the first investigation on <a href="http://www.jquestapp.com" target="_blank">jQuest</a>, a platform for journalism schools that lets journalism students in Europe learn datajournalism, connect with each other and investigate collaboratively.
         </p>
         <p class="lead">
           We are investigating the representativity of elected officials in assemblies all over Europe. The data you see here is live. The database will grow more complete as the academic year continues.
@@ -18,7 +18,7 @@
       <div class="container">
         <h3 class="main__elastic__filters__heading">Filter legislatures</h3>
          <p class="lead">
-          Use the filters to select a legislature and visualize the data collected on the representatives. 
+          Use the filters to select a legislature and visualize the data collected on the representatives.
         </p>
         <div class="hidden-md-up">
           <div class="form-group">
